# Maintenance_tracker

./: README.md
backend/: .gitignore  debug_db.py  fix_admin_role.py  pyproject.toml  seed_technicians.py  verify_auth.py  verify_full_flow.py  verify_rbac.py
backend/app/: config.py  database.py  main.py
backend/app/models/: equipment.py  request.py  team.py  user.py
backend/app/routers/: equipment.py  requests.py  teams.py  users.py
backend/app/schemas/: equipment.py  request.py  team.py  user.py
backend/app/schemas/utils/: helpers.py
backend/app/utils/: dependencies.py  helpers.py
frontend/: calendar.html  equipment.html  index.html  login.html  reports.html  request.html  signup.html  teams.html
frontend/js/: config.js
